# qt_desktop-gallery

./: .gitignore  README.md
docs/: sbom_v0.23.0.json
src/: CMakeLists.txt  defaultmeta_widget.cpp  defaultmeta_widget.h  defaultmeta_widget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  picture_widget.cpp  picture_widget.h  picture_widget.ui  resources.qrc
src/configure/: rz_config.h.in
src/i18n/: qt_desktop-gallery_de.qm  qt_desktop-gallery_de.ts  qt_desktop-gallery_en.qm  qt_desktop-gallery_en.ts
src/includes/: rz_config.h  rz_hwinfo.cpp  rz_hwinfo.h  rz_metadata.hpp  rz_metadata.hpp_2025-02-02  rz_myevent.hpp  rz_photo.cpp  rz_photo.hpp
